@@ -445,6 +445,14 @@ QStringList soundkonverter_filter_sox::convertCommand( const KUrl& inputFile, co
             command += "-v";
         command += QString::number(filterOptions->data.sampleRate);
     }
+    foreach( const SoxFilterOptions::EffectData effectData, filterOptions->data.effects )
+    {
+        if( effectData.effectName == "norm" || effectData.effectName == "bass" || effectData.effectName == "treble" )
+        {
+            command += effectData.effectName;
+            command += QString::number(effectData.data.at(0).toDouble());
+        }
+    }
 
     return command;
 }
